# check_api_status

./: .gitignore  Cargo.toml  README.md  config_template.json  template.yml
src/: app.rs  main.rs  request.rs  ui.rs
src/utils/: email.rs  mod.rs  notify.rs  yarn.rs
