[package]
name = "api_status"
version = "0.1.0"
authors = ["Elton de Andrade Rodrigues <eltonrodrigues61@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
notify-rust = "4"
serde_json = "1.0"
serde_derive = "1.0" 
serde = "1.0"
dotenv = "0.15.0"
clap = "3.1.8"
job_scheduler = "*"
yaml-rust = "0.4"
serde_yaml = "0.8.23"